--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "canvas": "^2.7.0",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
   }
